mejora slider productos y agragado de ofertas

--- a/ofertas.html
+++ b/ofertas.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ofertas Supermercado</title>
     <link rel="stylesheet" href="ofertas.css">
 </head>
+
 <body>
-    <h1>Ofertas</h1>
+    <h1 id="titulo-principal">Ofertas increibles solo en nuestro sitio web</h1>
+
+    <div class="oferta-productos">
+
+        <div id="primera-oferta">
+            <h2>Kefir de Agua</h2>
+            <h3> 3x2 Martes y Miercoles</h3>
+            <img src="https://th.bing.com/th/id/OIP.ERiMWpc91f25xqdZk9CvtQHaIL?w=193&h=213&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-1">
+            <p>3 cuotas sin interes</p>
+            <img src="https://th.bing.com/th/id/OIP.VMOEwJQJx-xy0Dw1IRRwPwHaE7?w=228&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-2">
+            <p>15 % de descuento</p>
+
+        </div>
+
+        <div id="segunda-oferta">
+            <h2>Pan Integral</h2>
+            <h3>25% en la segunda unidad</h3>
+            <img src="https://th.bing.com/th/id/OIP.ERiMWpc91f25xqdZk9CvtQHaIL?w=193&h=213&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-1">
+            <p>3 cuotas sin interes</p>
+            <img src="https://th.bing.com/th/id/OIP.7N8aus2SIrt3DQSlr-Oe6QHaHa?w=155&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-2">
+            <p>Reintegro de hasta $200 tope</p>
+        </div>
+
+
+        <div id="tercera-oferta">
+            <h2>Jugo de Naranja</h2>
+            <h3>2x1 Lunes a Viernes</h3>
+            <img src="https://th.bing.com/th/id/OIP.MIY8_28KOR5g0R1L-VokPQHaHa?w=159&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-1">
+            <p>10% de descuento en un solo pago</p>
+            <img src="https://th.bing.com/th/id/OIP.Q5DfnAWrXVGYH_u_cvm7qQHaGp?w=180&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-2">
+            <p>Reintegro de hasta $50 tope</p>
+        </div>
+
+        <div id="cuarta-oferta">
+            <h2>Tofu</h2>
+            <h3>Sabado y Domingo</h3>
+            <img id="img-especial"
+                src="https://th.bing.com/th/id/OIP.pqbXiynMeKA10oUJtJYP4wHaEK?w=329&h=185&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-1">
+            <p>15% de descuento</p>
+            <img id="imagen-especial-2"
+                src="https://th.bing.com/th/id/OIP.ELDsa8Pj1f1YhFMdfIoHwwHaHa?w=186&h=186&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                alt="imagen-2">
+            <p>50% de descuento jubilados y pensionados</p>
+        </div>
+    </div>
 </body>
+
 </html>
