--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <button id="carrito-notif-1" type="button" class="btn btn-primary position-relative">
+        <a href="carrito.html" id="carrito-notif-1" type="button" class="btn btn-primary position-relative">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus"
             viewBox="0 0 16 16">
             <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
@@ -35,7 +35,7 @@
             0
             <span class="visually-hidden">unread messages</span>
           </span>
-        </button>
+        </a>
 
       </div>
 
@@ -56,7 +56,7 @@
         </ul>
       </div>
 
-      <button id="carrito-notif-2" type="button" class="btn btn-primary position-relative">
+      <a href="carrito.html" id="carrito-notif-2" type="button" class="btn btn-primary position-relative">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus"
           viewBox="0 0 16 16">
           <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
@@ -68,7 +68,7 @@
           0
           <span class="visually-hidden">unread messages</span>
         </span>
-      </button>
+      </a>
     </div>
   </nav>
 
@@ -120,8 +120,6 @@
   </div>
 
  <div id="slider-container">
-        <button id="anterior" onclick="slideProductos(1)">&#10094;</button>
-        <button id="siguiente" onclick="slideProductos(-1)">&#10095;</button>
         <div id="slider">
           <div id="contenedor-productos">
             <!-- Contenido de los productos -->
